added matches by year endpoint.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.username=chandrakant
 spring.datasource.password=
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
-spring.batch.initialize-schema=always
+#spring.jpa.hibernate.ddl-auto=create
+#spring.batch.initialize-schema=always
